--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: ${{ github.repository_owner }}/ext-builder
+          ref: 'initial-setup'
           path: 'ext-builder'
-
-      - run: pwd
-      - run: ls
 
       - name: Build Boost
         run: ./ext-builder/build.py ./ext-boost --image ghcr.io/tst-race/ext-builder:initial-setup --target linux-x86_64
