--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,6 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build Linux x86_64
-        uses: ${{ github.repository_owner }}/build-ext-action@v1
+        uses: tst-race/build-ext-action@v1
         with:
           target: linux-x86_64
