--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,9 +32,15 @@ jobs:
         with:
           target: android-arm64-v8a
 
+      - name: Build Linux arm64-v8a
+        uses: tst-race/build-ext-action@v1
+        with:
+          target: linux-arm64-v8a
+
       - name: Upload Build Artifacts
         if: ${{ always() }}
         uses: actions/upload-artifact@v3
         with:
           name: build-artifacts
           path: ext-cache/boost-*
+          retention-days: 10
