--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,9 +38,15 @@ jobs:
           target: linux-arm64-v8a
 
       - name: Upload Build Artifacts
-        if: ${{ always() }}
+        if: always()
         uses: actions/upload-artifact@v3
         with:
           name: build-artifacts
           path: ext-cache/boost-*
           retention-days: 10
+
+      - name: Create Release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v1
+        with:
+          files: ext-cache/boost-*.tar.gz
