--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,42 +11,5 @@ permissions:
   contents: write
 
 jobs:
-  build-boost:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Boost
-        uses: actions/checkout@v3
-
-      - name: Build Linux x86_64
-        uses: tst-race/build-ext-action@v1
-        with:
-          target: linux-x86_64
-
-      - name: Build Android x86_64
-        uses: tst-race/build-ext-action@v1
-        with:
-          target: android-x86_64
-
-      - name: Build Android arm64-v8a
-        uses: tst-race/build-ext-action@v1
-        with:
-          target: android-arm64-v8a
-
-      - name: Build Linux arm64-v8a
-        uses: tst-race/build-ext-action@v1
-        with:
-          target: linux-arm64-v8a
-
-      - name: Upload Build Artifacts
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: build-artifacts
-          path: ext-cache/boost-*
-          retention-days: 10
-
-      - name: Create Release
-        if: startsWith(github.ref, 'refs/tags/')
-        uses: softprops/action-gh-release@v1
-        with:
-          files: ext-cache/boost-*.tar.gz
+  build:
+    uses: tst-race/ext-build-action/workflow.yml@v1
